<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button2"
        android:layout_width="201dp"
        android:layout_height="0dp"
        android:layout_marginBottom="525dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="@string/Alcohol" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="7dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Smoking" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="187dp"
        android:layout_height="84dp"
        android:background="#83936D"
        android:text="TextView"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="577dp"
        tools:text="@string/Advice1" />

</androidx.constraintlayout.widget.ConstraintLayout>